se agregan austes de calidad y archivo readme